--- a/blub-lock-sdk/package.json
+++ b/blub-lock-sdk/package.json
@@ -26,14 +26,25 @@
     "decimal.js": "^10.4.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
-    "jest": "^29.7.0",
     "prettier": "^3.2.4",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1",
+    "@jest/globals": "^29.7.0",
+    "@mysten/sui": "^1.0.5",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.12.12",
+    "babel-jest": "^29.7.0",
+    "bip39": "^3.1.0",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "json-bigint": "^1.0.0",
+    "node-fetch": "^3.3.2",
+    "ts-jest": "^29.1.3",
+    "typescript": "^5.0.0"
   },
   "files": [
     "dist",
